Providing SBT launcher in project
This makes the project a little more accessible.  Normally I don't like
checking in binaries into Git repositories, but I think this one won't
hurt.

I also adjusted the README.md file accordingly.