@@ -1,10 +1,12 @@
-# Learning Scala
+Learning Scala
+==============
 
 This is a project where I plan to aggregate small pieces of code to help
 communicate what I've learned while studying [Scala](http://scala-lang.org).
 
 
-## Organization
+Organization
+------------
 
 I'm going to try to keep the project clean enough that the code is
 self-documenting.  The project divides into three variants of code:
@@ -20,46 +22,37 @@ There are a few modules designed for reuse, but in general, I've tried to map
 complete discussions to single files so they read more like short articles.
 
 
-## Build/Execution
+Using This Project
+------------------
 
-This project builds with [SBT](https://github.com/harrah/xsbt), which is
-extremely powerful and for simple projects like this one pretty easy to use.
-The documentation for SBT much improved now, so see [SBT's Getting Starting
-Guide](https://github.com/harrah/xsbt/wiki/Getting-Started-Welcome) for details
-on running the tool.
+This project builds with [Simple Build Tool (SBT)](http://www.scala-sbt.org),
+which is extremely powerful and for simple projects like this one pretty easy
+to use.  The documentation for SBT much improved now, so see [SBT's Getting
+Starting Guide](http://www.scala-sbt.org/release/docs/Getting-Started)
+for details on running the tool.
 
-The nice part about SBT is you really don't need much on your system beyond a
-JDK and the sbt-launcher.jar, which bootstraps your system to download the rest
-from the public internet (include the Scala compiler and core libraries).
+This project provides binaries and scripts to bootstrap SBT, so all you need
+installed on your system is a recent release of a Java runtime.
 
-Here's a few steps to help you get started.
+For Windows users run
 
-1. Make sure you have a late edition JDK installed.
+    $ .\sbt.cmd
 
-2. Download [SBT's sbt-launcher](http://typesafe.artifactoryonline.com/typesafe/ivy-releases/org.scala-tools.sbt/sbt-launch).
+or for Macintosh or GNU/Linux users run
 
-3. Design a script to run the launcher like the one below.
+    $ ./sbt
 
-4. Run the script from the root of this project.  This will gets you into a
-   very nice console from which you can execute useful commands like "compile",
-   "test", "run", "doc", and "console".
+which will download dependencies and launch into SBT's interactive shell.  At
+the shell's prompt you can issue commands to work with the code.  Some useful
+commands are
 
-```sh
-#!/bin/sh
-
-
-JAVA_BIN="$HOME/opt/jdk/jdk7/bin/java"
-JAVA_OPTS="
-   -Xmx2048M
-   -XX:MaxPermSize=350m
-   -XX:+CMSClassUnloadingEnabled
-   -XX:+DoEscapeAnalysis
-"
-SBT_JAR="$HOME/opt/sbt/sbt-launch.jar"
-
-
-$JAVA_BIN $JAVA_OPTS -jar "$SBT_JAR" $@
-```
+* `compile`:  to validate that everything compiles
+* `test`:  to run tests under src/test/scala
+* `run`:  to run main methods under src/main/scala
+* `doc`:  to generate Scaladocs for code under src/main/scala
+* `test:doc`:  to generate Scaladocs for code under src/test/scala
+* `console`:  to play around with the code in a Scala REPL
+* `exit`:  to exit SBT
 
 But really, you shouldn't need all this fanciness to follow along.  Just
 reading the code will probably suffice.
